--- a/website/index.html
+++ b/website/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html class="text-gray-900 leading-tight">
+  <head>
+    <title>Serverless rego authorization - rego.fyi!</title>
+    <meta name="description" content="Serverless demo and implementation of open policy agent and rego." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  </head>
   <body>
     <div id="app"></div>
 
     <script type="module" src="js/index.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
