--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="text-gray-900 leading-tight">
   <head>
+    <base href="/" />
     <title>Serverless rego authorization - rego.fyi!</title>
     <meta name="description" content="Serverless demo and implementation of open policy agent and rego." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
